[package]
name = "npmcheater"
version = "0.2.1"
authors = ["DaBigBlob <research@0x000.io>"]
description = "Artificially bump the downloads of an npm package."
repository = "https://github.com/DaBigBlob/npmcheater"
homepage = "https://github.com/DaBigBlob/npmcheater"
license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["npmjs", "npm"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["builds/*"]

[dependencies]
rand = "0.8.5"
reqwest = {version = "0.11.22", features = ["blocking", "json", "gzip", "brotli", "deflate"]}
serde_json = "1.0.108"
openssl = { version = "0.10", features = ["vendored"] }
colored = "2.0.4"

[profile.release]
opt-level = 2
lto = true
