[package]
name = "npmcheater"
version = "0.3.5"
authors = ["DaBigBlob <research@0x000.io>"]
description = "Artificially bump the downloads of an npm package."
repository = "https://github.com/DaBigBlob/npmcheater"
homepage = "https://github.com/DaBigBlob/npmcheater"
documentation = "https://github.com/DaBigBlob/npmcheater"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["npmjs", "npm"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["builds/*", "build.sh"]

[dependencies]
rand = "0.8.5"
reqwest = {version = "0.11.22", features = ["blocking", "json", "gzip", "brotli", "deflate"]}
serde_json = "1.0.108"
openssl = { version = "0.10", features = ["vendored"] }
clap = {version = "4.4.10", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.3.3"

[profile.release]
opt-level = 2
lto = true
